--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>ELRUMI Web</title>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
   <div id="header">
@@ -31,18 +33,19 @@
         </ul>
       </nav>
     </div>
-
+    <div class="clearfix"></div>
     <div class="header">
-      <h1>WE MAKE SOMETHING YOU WILL LOVE</h1>
+      <h1 class="title">WE MAKE SOMETHING YOU WILL LOVE</h1>
     </div>
   </div>
 
   <section>
     <div class="container">
       <h2>OUR PORTFOLIE</h2>
-      <p>See Some of Our Work</p>
-      <hr>
-      <ul>
+
+      <p class="subtitle">See Some of Our Work</p>
+      <hr width="50px">
+      <ul class="second-ul">
         <li>
           <a href="#">ALL</a>
         </li>
@@ -62,52 +65,28 @@
           <a href="#">ILLUSTRATION</a>
         </li>
       </ul>
-
+      <div class="clearfix"></div>
       <div class="table">
         <div class="row">
           <div class="col-4">
             <div class="info">
-              <div>AWESOME WORK</div>
-              <p>Branding, Web Design</p>
-              <p>VIEW WORK &#9658</p>
+              <div class="white">AWESOME WORK</div>
+              <p class="white">Branding, Web Design</p>
+              <p class="goto">VIEW WORK &#9658</p>
             </div>
           </div>
           <div class="col-4">
             <div class="info">
-              <div>AWESOME WORK</div>
-              <p>Branding, Web Design</p>
-              <p>VIEW WORK &#9658</p>
+              <div class="white">AWESOME WORK</div>
+              <p class="white">Branding, Web Design</p>
+              <p class="goto">VIEW WORK &#9658</p>
             </div>
           </div>
           <div class="col-4">
             <div class="info">
-              <div>AWESOME WORK</div>
-              <p>Branding, Web Design</p>
-              <p>VIEW WORK &#9658</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-4">
-            <div class="info">
-              <div>AWESOME WORK</div>
-              <p>Branding, Web Design</p>
-              <p>VIEW WORK &#9658</p>
-            </div>
-          </div>
-          <div class="col-4">
-            <div class="info">
-              <div>AWESOME WORK</div>
-              <p>Branding, Web Design</p>
-              <p>VIEW WORK &#9658</p>
-            </div>
-          </div>
-          <div class="col-4">
-            <div class="info">
-              <div>AWESOME WORK</div>
-              <p>Branding, Web Design</p>
-              <p>VIEW WORK &#9658</p>
+              <div class="white">AWESOME WORK</div>
+              <p class="white">Branding, Web Design</p>
+              <p class="goto">VIEW WORK &#9658</p>
             </div>
           </div>
         </div>
@@ -115,23 +94,47 @@
         <div class="row">
           <div class="col-4">
             <div class="info">
-              <div>AWESOME WORK</div>
-              <p>Branding, Web Design</p>
-              <p>VIEW WORK &#9658</p>
+              <div class="white">AWESOME WORK</div>
+              <p class="white">Branding, Web Design</p>
+              <p class="goto">VIEW WORK &#9658</p>
             </div>
           </div>
           <div class="col-4">
             <div class="info">
-              <div>AWESOME WORK</div>
-              <p>Branding, Web Design</p>
-              <p>VIEW WORK &#9658</p>
+              <div class="white">AWESOME WORK</div>
+              <p class="white">Branding, Web Design</p>
+              <p class="goto">VIEW WORK &#9658</p>
             </div>
           </div>
           <div class="col-4">
             <div class="info">
-              <div>AWESOME WORK</div>
-              <p>Branding, Web Design</p>
-              <p>VIEW WORK &#9658</p>
+              <div class="white">AWESOME WORK</div>
+              <p class="white">Branding, Web Design</p>
+              <p class="goto">VIEW WORK &#9658</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-4">
+            <div class="info">
+              <div class="white">AWESOME WORK</div>
+              <p class="white">Branding, Web Design</p>
+              <p class="goto">VIEW WORK &#9658</p>
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="info">
+              <div class="white">AWESOME WORK</div>
+              <p class="white">Branding, Web Design</p>
+              <p class="goto">VIEW WORK &#9658</p>
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="info">
+              <div class="white">AWESOME WORK</div>
+              <p class="white">Branding, Web Design</p>
+              <p class="goto">VIEW WORK &#9658</p>
             </div>
           </div>
         </div>
