update 1st version homework

--- a/index.html
+++ b/index.html
@@ -140,15 +140,15 @@
         </div>
 
       </div>
-      <img src="http://placehold.it/30x30" alt="image">
-      <div>LOAD MORE</div>
+      <img class="refresh" src="image/refresh.png" alt="image">
+      <div id="load">LOAD MORE</div>
     </div>
   </section>
 
   <section>
-    <div class="footer">
+    <div id="footer">
       <h2>ELRUMI</h2>
-      <ul>
+        <ul>
         <li>
           <a href="#">FACEBOOK</a>
         </li>
@@ -165,9 +165,11 @@
           <a href="#">DRIBBBLE</a>
         </li>
       </ul>
-      <p>&copy 2015 Elrumi. Designed by Pottereight</p>
-    </div>
-  </section>
 
+      <div class="clearfix"></div>
+      <p id="copyright">&copy 2015 Elrumi. Designed by Pottereight</p>
+    </div>
+
+  </section>
 </body>
 </html>
